--- a/languages/en.ini
+++ b/languages/en.ini
@@ -10,7 +10,6 @@ account_block_options_missing = "Some choices have been removed due to a block o
 account_checkouts_due = "Items due soon"
 account_checkouts_overdue = "Items overdue"
 account_has_alerts = "Your account has alerts"
-account_menu_label = "Account information and options"
 account_normal_checkouts = "Items due later"
 account_requests_available = "Available for Pickup"
 account_requests_in_transit = "In Transit"
@@ -159,6 +158,7 @@ browse_lcc = "Call Number (LC)"
 browse_publishDate = "Year of Publication"
 browse_title = "Title"
 browse_topic = "Topic"
+Browser = "Browser"
 bulk_email_success = "Your item(s) were emailed"
 bulk_email_title = "Library Catalog Items"
 bulk_error_missing = "Some data was missing. Your request was not successful."
@@ -182,7 +182,6 @@ By Recent = "By Recent"
 By Region = "By Region"
 By Title = "By Title"
 By Topic = "By Topic"
-cached_record_warning = "This record is not available in the search index. Last cached version is shown."
 Call Number = "Call Number"
 callnumber_abbrev = "Call #"
 Cannot find record = "Cannot find record"
@@ -342,7 +341,6 @@ draw_searchbox_end = "Release mouse to finish drawing."
 draw_searchbox_start = "Click and drag to select an area."
 Due = "Due"
 Due Date = "Due Date"
-dumb_captcha_prompt = "Please enter the above text in reverse order:"
 DVD = "DVD"
 eBook = "eBook"
 Edit = "Edit"
@@ -397,8 +395,6 @@ empty_search_disallowed = "An empty query is not allowed with the search target"
 Enable Auto Config = "Enable Auto Config"
 End Page = "End Page"
 eol_ellipsis = "…"
-epf_recommendations = "Publication Results"
-epf_recommendations_more = "More Publication Results"
 ePub Full Text = "ePub Full Text"
 Era = "Era"
 error_inconsistent_parameters = "Sorry, an error has occurred. Inconsistent parameters detected."
@@ -717,11 +713,6 @@ Last Name = "Last Name"
 Last Search Result = "Last Search Result"
 less = "less"
 less_ellipsis = "less…"
-libguides_profile_suggestion_heading = "Talk to a Subject Librarian"
-libguides_recommendations = "Research Guide Results"
-libguides_recommendations_more = "More Research Guide Results"
-libguidesaz_recommendations = "Database Results"
-libguidesaz_recommendations_more = "More Database Results"
 libphonenumber_invalid = "Phone number invalid"
 libphonenumber_invalidcountry = "Invalid country calling code"
 libphonenumber_invalidregion = "Invalid region code:"
@@ -794,7 +785,6 @@ MLA Citation = "MLA Citation"
 MLA Edition Citation = "MLA (8th ed.) Citation"
 Mobile Number = "Mobile Number"
 mobile_link = "You appear to be on a mobile device; switch to mobile view?"
-mobile_toggle_navigation_text = "Toggle navigation"
 Monograph Title = "Monograph Title"
 more = "more"
 More catalog results = "More catalog results"
@@ -842,6 +832,7 @@ No new item information is currently available. = "No new item information is cu
 No pickup locations available = "No pickup locations available"
 No Preference = "No Preference"
 No reviews were found for this record = "No reviews were found for this record"
+No saved logins = "No saved logins"
 No Tags = "No Tags"
 no_description = "Description not available."
 no_email_address = "Email address missing."
@@ -1019,6 +1010,7 @@ pick_up_location = "Pickup Location"
 Place a Hold = "Place a Hold"
 Place of birth = "Place of birth"
 Place of death = "Place of death"
+Platform = "Platform"
 Playing Time = "Playing Time"
 Please check back soon = "Please check back soon"
 Please contact the Library Reference Department for assistance = "Please contact the Library Reference Department for assistance"
@@ -1123,6 +1115,7 @@ relais_success_message = "Request id #%%id%% was created. You will receive a con
 Related Author = "Related Author"
 Related Items = "Related Items"
 Related Subjects = "Related Subjects"
+remember_me = "Remember my login for the next %%days%% days"
 Remove filter = "Remove Filter"
 Remove Filters = "Remove Filters"
 Remove from Book Bag = "Remove from Book Bag"
@@ -1167,6 +1160,7 @@ Save Comment = "Save Comment"
 save_search = "Save Search"
 save_search_remove = "Remove Saved Search"
 Saved in = "Saved in"
+Saved Logins = "Saved Logins"
 schedule_daily = "Daily"
 schedule_explanation = "Receive alert emails about new results for search."
 schedule_none = "None"
@@ -1330,7 +1324,6 @@ tag_delete_warning = "Warning! You are about to delete %count% resource tag(s)"
 tag_filter_empty = "No tags are available for this filter"
 Tags = "Tags"
 tags_deleted = "%count% tag(s) deleted"
-temporary_search_tab_title = "Custom Search"
 test_fail = "Failed"
 test_fix = "Fix"
 test_ok = "OK"
@@ -1353,7 +1346,6 @@ Title View = "Title View"
 title_hold_place = "Place a Title Level Request"
 title_wrapper = "%%pageTitle%% %%titleSeparator%% %%siteTitle%%"
 To = "To"
-toggle_dropdown = "Toggle Dropdown"
 Too Many Email Recipients = "Too Many Email Recipients"
 too_many_favorites = "This list is too large to display all at once. Try rearranging your saved items into more lists or limiting using tags."
 too_many_new_items = "There are too many new items to display in a single list. Try limiting your search."
@@ -1427,7 +1419,7 @@ Volume Holdings = "Volume Holdings"
 VuFind Administration - Feedback Management = "VuFind Administration - Feedback Management"
 VuFind Configuration = "VuFind Configuration"
 vufind_upgrade_fail = "We cannot upgrade VuFind at this time"
-Warning: These citations may not always be 100% accurate = "Warning: These citations may not always be 100% accurate"
+Warning: These citations may not always be 100% accurate = "Remember to check citations for accuracy before including them in your work"
 wcterms_broader = "Broader Subjects"
 wcterms_exact = "Related Subjects"
 wcterms_narrower = "Narrower Subjects"
@@ -1437,6 +1429,7 @@ What am I looking at = "What am I looking at?"
 widen_prefix = "Try widening your search to"
 wiki_link = "Provided by Wikipedia"
 with filters = "with filters"
+with_selected = "with selected"
 Year of Publication = "Year of Publication"
 Yesterday = "Yesterday"
 You do not have any fines = "You do not have any fines"
